# awesome-maintainer-defense

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.ja.md  README.md  README.vi.md  ROADMAP.md  SECURITY.md  auditor-rules.json  auditor.schema.json  audits.json  audits.schema.json  build_backend.py  catalog.json  catalog.schema.json  pins.json  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: add-resource.yml  auditor-false-positive.yml  auditor-pilot.yml  config.yml  field-report.yml
.github/workflows/: links.yml  quality.yml  (+1 more)
Formula/: maintainer-defense-kit.rb
assets/: README.md
docs/: AUDITOR.md  AUDITOR_EVALUATION.md  AUDITOR_PILOT.md  AUDITOR_PILOT_PROGRAM.md  AUDITOR_RULES.md  AUDIT_LOG.md  EVALUATION.md  KIT_ASSURANCE.md  MATURITY_MODEL.md  NATIVE_CONTROLS.md  PLAYBOOK.md  PROFILE_SIGNALS.md  README.md  RESOURCE_AUDIT.md  SOLUTIONS_add_a_documentationcorrec.md  THREAT_MODEL.md  VISUAL_STYLE.md
i18n/: ja.json  vi.json
policies/: AI_CONTRIBUTIONS.ja.md  AI_CONTRIBUTIONS.md  AI_CONTRIBUTIONS.vi.md  UNSOLICITED_PULL_REQUESTS.ja.md  UNSOLICITED_PULL_REQUESTS.md  UNSOLICITED_PULL_REQUESTS.vi.md
responses/: low-quality-pr.md  reproduction-needed.md
scripts/: build_standalone.py  check_links.py  evaluate_auditor.py  install_kit.py  render.py  render_audit.py  render_demo.mjs  render_social_preview.mjs  test_auditor.py  test_distribution.py  test_install_kit.py  validate.py  verify_metadata.py  verify_pins.py  verify_release_assets.py
(+29 files in other folders)
